fix modal z-index

--- a/src/components/BackgroundBlur/backgroundBlur.scss
+++ b/src/components/BackgroundBlur/backgroundBlur.scss
@@ -6,7 +6,7 @@
     filter: brightness(0.7);
     top: 0;
     left: 0;
-    z-index: 4;
+    z-index: 30;
 }
 
 .disable_blur {
