--- a/src/components/CalcModal/CalcModal.scss
+++ b/src/components/CalcModal/CalcModal.scss
@@ -9,7 +9,7 @@
     left: 50%;
     margin-top: -300px;
     margin-left: -512px;
-    z-index: 5;
+    z-index: 50;
     transition: 0.5s ease all;
 }
 
