--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,6 +7,7 @@
     align-items: center;
     gap: 100px;
     padding: 0 20px;
+    z-index: 10;
 }
 
 main {
